# plagi_code

./: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: security.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: auth_service.py  user_service.py
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/versions/: 7755a13819f4_initial_migration.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: users.py
backend/app/core/: config.py
backend/app/models/: user.py
backend/app/services/: user_service.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/footer/: footer.css  footer.tsx
frontend/src/components/header/: header.css  header.tsx
frontend/src/old-components/: CodePlagiarismChecker.css  ComparisonDetailsPage.js  ResultAigc.css  ResultAigc.js  ResultBS.js  Resultai.css  Resultai.js  Resultbs1.js  SimilarityMatrix.js  SimilarityMatrixPage.js
frontend/src/pages/check-results/: check-results.css  сheck-results.tsx
frontend/src/pages/history/: history.css  history.tsx
frontend/src/pages/login/: login.css  login.tsx
frontend/src/pages/similarity-matrix/: similarity-matrix.css  similarity-matrix.tsx
frontend/src/pages/upload/: upload.css  upload.tsx
frontend/src/styles/: App.css
